--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   publish = "build"
-  command = "vite build && cp sitemap.xml build/"
+  command = "vite build && cp sitemap.xml robots.txt build/"
