--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
           "react-day-picker": "^8.10.1",
           "react-dom": "^18.3.1",
           "react-hook-form": "^7.55.0",
-          "react-resizable-panels": "^2.1.7",
-          "recharts": "^2.15.2",
-          "sonner": "^2.0.3",
-          "tailwind-merge": "*",
-          "vaul": "^1.1.2"
+        "react-resizable-panels": "^2.1.7",
+        "recharts": "^2.15.2",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "*",
+        "vaul": "^1.1.2",
+        "@netlify/visual-editor": "^1.0.0",
+        "@stackbit/sdk": "^1.0.0"
       },
       "devDependencies": {
           "@types/node": "^20.10.0",
