--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
         "recharts": "^2.15.2",
         "sonner": "^2.0.3",
         "tailwind-merge": "*",
-        "vaul": "^1.1.2",
-        "@netlify/visual-editor": "^1.0.0",
-        "@stackbit/sdk": "^1.0.0"
+        "vaul": "^1.1.2"
       },
       "devDependencies": {
           "@types/node": "^20.10.0",
