--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@netlify/visual-editor": "^0.7.2",
-    "@types/node": "^20.10.0",
-    "@vitejs/plugin-react-swc": "^3.10.2",
-    "vite": "6.3.5"
-  },
+  "@netlify/visual-editor": "github:netlify/visual-editor#v0.7.2",
+  "@types/node": "^20.10.0",
+  "@vitejs/plugin-react-swc": "^3.10.2",
+  "vite": "6.3.5"
+}
   "scripts": {
     "dev": "vite",
     "build": "vite build"
