--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@stackbit/types": "^1.0.0",
     "@stackbit/cms-git": "^1.0.0",
+    "@stackbit/types": "^1.0.0",
     "@types/node": "^20.10.0",
+    "@types/react": "^19.2.2",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "vite": "6.3.5"
   },
