--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,11 @@
   command = "npm run build && npm ci --prefix portal && npm run build --prefix portal && mkdir -p dist/portal && cp -r portal/dist/. dist/portal && cp sitemap.xml robots.txt dist/"
 
 [[redirects]]
+  from = "/portal"
+  to = "/portal/index.html"
+  status = 200
+
+[[redirects]]
   from = "/portal/*"
   to = "/portal/index.html"
   status = 200
